--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -171,10 +171,13 @@
     <footer class="home-container22">
       <img alt="image" src="/assets/playground_assets/logo-no-background.svg" class="home-image11" />
       <div class="home-container23">
-        <a transitionTo="/" class="home-navlink1">About</a>
-        <span class="home-text23">Menu</span>
-        <a transitionTo="/partners" class="home-navlink2">Partners</a>
-        <a transitionTo="/contact" class="home-navlink3">Contact</a>
+
+        <a routerLink="/" class="home-navlink1">About</a>
+        <a routerLink="/menu" class="home-navlink1">Menu</a>
+        <a routerLink="/partners" class="home-navlink2">Partners</a>
+        <a routerLink="/contact" class="home-navlink3">Contact</a>
+
+        
       </div>
       <div class="home-divider2"></div>
       <div class="home-container24">
