--- a/client/src/app/pages/partners/partners.component.html
+++ b/client/src/app/pages/partners/partners.component.html
@@ -29,7 +29,7 @@
       >
         <img
           alt="image"
-          src="/assets/playground_assets/screenshot%202023-05-20%20at%202.59.02%20pm-1500h.png"
+          src="/assets/playground_assets/1.png"
           class="partners-image1"
         />
       </a>
