--- a/client/src/app/pages/upload/upload.component.html
+++ b/client/src/app/pages/upload/upload.component.html
@@ -1,7 +1,7 @@
-<p>upload works!</p>
+<!-- <p>upload works!</p>
 <table>
     <tr>
         <td><img [src]="imageData" class="thumbnail"/> </td>
     </tr>
 
-</table>
+</table> -->
